[package]
name = "file_sys"
version = "0.1.0"
authors = ["Beni <reydmanb@myumanitoba.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
crc = "1.8.1"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.1.4"