[package]
name = "test_connection"
version = "0.1.0"
authors = ["Beni <beni@augsignals.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
paho-mqtt = "0.4"
redis = "0.8.0"
log = "0.3"
env_logger = "0.3"